--- a/checkout.html
+++ b/checkout.html
@@ -35,13 +35,15 @@
     <div id="top-bar">
       <!-- Logo -->
       <div class="logo">
-        <h4><span>SHOP</span>LANE</h4>
+        <a href="./index.html"
+          ><h4><span>SHOP</span>LANE</h4></a
+        >
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#">Clothings</a></li>
-        <li><a href="#">Accessories</a></li>
+        <li><a href="/index.html#clothing">Clothings</a></li>
+        <li><a href="/index.html#accessories">Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
@@ -75,7 +77,7 @@
             <h2>Total Amount</h2>
             <p>Total Amount: Rs <span id="total-amount"></span></p>
             <a href="./orderconfirm.html">
-            <button id="place-order">Place Order</button>
+              <button id="place-order">Place Order</button>
             </a>
           </div>
         </div>
