--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <div id="top-bar">
       <!-- Logo -->
       <div class="logo">
-        <h4><span>SHOP</span>LANE</h4>
+        <a href="./index.html"
+          ><h4><span>SHOP</span>LANE</h4></a
+        >
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
