--- a/orderconfirm.html
+++ b/orderconfirm.html
@@ -36,13 +36,15 @@
     <div id="top-bar">
       <!-- Logo -->
       <div class="logo">
-        <h4><span>SHOP</span>LANE</h4>
+        <a href="./index.html"
+          ><h4><span>SHOP</span>LANE</h4></a
+        >
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#clothing">Clothings</a></li>
-        <li><a href="#accessories">Accessories</a></li>
+        <li><a href="/index.html#clothing">Clothings</a></li>
+        <li><a href="/index.html#accessories">Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
@@ -65,11 +67,10 @@
     <!-- TopBar End -->
 
     <div class="order-confirm">
-        <img src="./img/img_confirm.png" alt="">
-        <h3>Order Placed Successfully!!</h3>
-        <p>We have sent you an email with the order details</p>
-
-    </div>  
+      <img src="./img/img_confirm.png" alt="" />
+      <h3>Order Placed Successfully!!</h3>
+      <p>We have sent you an email with the order details</p>
+    </div>
 
     <!-- FOOTER SECTION START -->
     <footer>
