--- a/product.html
+++ b/product.html
@@ -35,13 +35,13 @@
     <div id="top-bar">
       <!-- Logo -->
       <div class="logo">
-        <h4><span>SHOP</span>LANE</h4>
+        <a href="./index.html"><h4><span>SHOP</span>LANE</h4></a>
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#">Clothings</a></li>
-        <li><a href="#">Accessories</a></li>
+        <li><a href="/index.html#clothing">Clothings</a></li>
+        <li><a href="/index.html#accessories">Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
